seasonssk.css
/* Testlayout stylesheet */

@import url(../../../css/csslayer.css);

html.season_1 {
	background: url("img/backgroundSeason1.jpg");
}
html.season_2 {
	background: url("img/backgroundSeason2.jpg");
}
html.season_3 {
	background: url("img/backgroundSeason3.jpg");
}
html.season_4 {
	background: url("img/backgroundSeason4.jpg");
}

h3 {
	color: white;
}

:root {
	--scoreColor: #2373a1;
	--scoreSecondaryColor: #325590;
    --scoreShadowColor: white;
}

/* main board */

#board {
	width: 400px;
	height: 400px;
	background-image: url("img/board.png");
	float: left;
	position: relative;
	box-shadow: 0px 0px 10px 4px #e9b415;
	border-radius: 210px;
}
#season_library_choice {
	width: 410px;
	float: left;
	position: relative;
	left: -10px;
	top: -10px;
}

#season_dices_wrap {
	display: none;
}
.gamestate_playerTurn #season_dices_wrap {
	display: grid;
}

.tokenart {
	width: 100px;
	height: 100px;
	background: url("img/pathOfDestinyTokens.png");
	display: inline-block;
}

.tokentooltip {
	text-align: center;
	max-width: 250px;
}

#abilityTokens {
	display: none;
}
.gamestate_chooseToken #abilityTokens,
.gamestate_draftChoice #abilityTokens,
.gamestate_draftTwist #abilityTokens,
.gamestate_prepareBuildLibrary #abilityTokens,
.gamestate_buildLibraryNew #abilityTokens {
	display: block;
}

.season_1 #season_dices_wrap {
	border: 2px solid #008080;
}
.season_2 #season_dices_wrap {
	border: 2px solid #61ac1b;
}
.season_3 #season_dices_wrap {
	border: 2px solid #f8ea26;
}
.season_4 #season_dices_wrap {
	border: 2px solid #fc3737;
}

.seasons_rightpanel {
	margin-left: 410px;
}

.monthplace {
	width: 30px;
	height: 30px;
	position: absolute;
}
#monthplace_1 {
	left: 230px;
	top: 10px;
}
#monthplace_2 {
	left: 315px;
	top: 55px;
}
#monthplace_3 {
	left: 360px;
	top: 140px;
}
#monthplace_4 {
	left: 360px;
	top: 230px;
}
#monthplace_5 {
	left: 315px;
	top: 315px;
}
#monthplace_6 {
	left: 230px;
	top: 360px;
}
#monthplace_7 {
	left: 140px;
	top: 360px;
}
#monthplace_8 {
	left: 55px;
	top: 315px;
}
#monthplace_9 {
	left: 10px;
	top: 230px;
}
#monthplace_10 {
	left: 10px;
	top: 140px;
}
#monthplace_11 {
	left: 55px;
	top: 55px;
}
#monthplace_12 {
	left: 140px;
	top: 10px;
}

#current_month {
	width: 30px;
	height: 30px;
	background-image: url("img/icons.png");
	position: absolute;
	background-position: -0px -25px;
	left: 185px;
	top: 185px;
}

.yearplace {
	position: absolute;
	width: 36px;
	height: 36px;
}
#yearplace_1 {
	left: 149px;
	top: 183px;
}
#yearplace_2 {
	left: 181px;
	top: 183px;
}
#yearplace_3 {
	left: 214px;
	top: 183px;
}

#current_year {
	width: 36px;
	height: 36px;
	box-shadow: 0px 0px 7px 8px #e9b415;
	border-radius: 20px;
	position: absolute;
	background-position: -30px -25px;
	left: 149px;
	top: 183px;
}

.bonus_actions {
	display: grid;
	grid-template-columns: 40px 40px;
	grid-template-rows: 56px 56px;
	grid-column-gap: 5px;
	grid-row-gap: 5px;
}

.bonus {
	cursor: pointer;
	background-image: url("img/bonuses.png");
	border-radius: 6px;
}
.bonus1 {
	width: 39px;
	height: 55px;
	background-position: -47px -3px;
}
.bonus2 {
	width: 39px;
	height: 55px;
	background-position: -92px -3px;
}
.bonus3 {
	width: 38px;
	height: 55px;
	background-position: -3px -3px;
}
.bonus4 {
	width: 39px;
	height: 55px;
	background-position: -137px -3px;
}

.ssn-info {
	font-size: smaller;
}

.enabled {
	box-shadow: 0px 0px 1px 2px #f0ec18;
}

#season_dices_wrap {
	display: grid;
	grid-template-columns: max-content auto;
	justify-content: space-between;
	align-items: center;
}

.conversion_reminder {
	display: flex;
	grid-column: 2;
}

.reminder {
	display: flex;
}

#convertFor1 .energy {
	margin: 0px 3px 0px 3px;
}

/*Player board on the left*/
.leftPlayerBoard {
	border: 2px solid #9d7e7e;
	border-radius: 60px;
	display: inline-flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 5px 5px 25px 5px;
}
.leftPlayerBoard .ssn-avatar {
	width: 80px;
	height: 80px;
	border: 2px solid;
	border-radius: 40px;
	margin-top: -38px;
	border-color: inherit;
}

.bonus_actions_used {
	margin-bottom: 5px;
}

.bonus_actions_used div:first-child,
.bonus_actions_used div:last-child {
	margin-bottom: -4px;
}

.leftPlayerBoard .icon_cristal {
	margin-left: -105px;
}
.leftPlayerBoard .icon_play {
	margin-right: -105px;

	/*todo replace with position: relative;
    top: -18px;
    right: -56px;*/
}
.counter {
	color: white;
	font-weight: bold;
	display: flex !important;
	justify-content: center;
	align-items: center;
}

.ages {
	display: flex;
	column-gap: 6px;
	justify-content: center;
	margin-top: 10px;
}
.age {
	width: 35px;
	height: 35px;
}

.age2 {
	background-color: teal;
}
.age3 {
	background-color: greenyellow;
}

.tableau {
	display: grid;
	grid-template-columns: max-content auto;
	column-gap: 7px;

	/*todo remplacer par vraie image. */
	/*margin: 50px 8%;*/
	/*border-image-repeat: round;*/
	/*background: url("https://image.shutterstock.com/image-illustration/old-paper-scroll-ancient-parchment-600w-720299497.jpg")
	no-repeat;*/

	/*
	border: 60px solid transparent;
	border-image-source: url("https://image.shutterstock.com/image-illustration/old-paper-scroll-ancient-parchment-600w-720299497.jpg");
	border-image-slice: 186;
	background-position: 43% 70%;
	background-size: 316%;*/
	background: url("https://cdn.pixabay.com/photo/2017/09/28/08/38/paper-2794699_960_720.png")
		no-repeat;
	background-size: cover;
}

.stock-wrapper {
	display: grid;
}

.stock-wrapper div {
	grid-column: 1;
	grid-row: 1;
}

/* card */

.cardtitle {
	position: absolute;
	top: 5px;
	left: 23px;
	font-weight: bold;
	font-size: 50%;
	width: 80px;
	text-align: center;
}

.cardtooltip {
	text-align: center;
	max-width: 300px;
}
.dietooltip {
	max-width: 300px;
}
.possibleCard {
	border-radius: 15px;
	box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
	-moz-box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
	-webkit-box-shadow: 0px 0px 2px 2px rgb(186 86 209 / 93%);
	cursor: default;
}
/* ... */

